...
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TopUsersViewController" customModule="Code_Forces" customModuleProvider="target">
            <connections>
                <outlet property="activeOnlyFilter" destination="VRf-1v-OVP" id="uRD-G4-7T6"/>
                <outlet property="activeRightAnchor" destination="2DZ-Vl-gIA" id="Kyn-cc-S5d"/>
                <outlet property="menu" destination="1NX-KG-fJG" id="gRd-6e-0Bl"/>
                <outlet property="ratingSort" destination="Qkv-XA-GTQ" id="UzS-vp-x2N"/>
                <outlet property="reloadData" destination="PTL-HH-1vN" id="MO8-iR-sgp"/>
                <outlet property="reloadRightAnchor" destination="ijI-iS-bMe" id="cpZ-IV-GoX"/>
                <outlet property="searchBar" destination="dCP-BR-k8b" id="Arr-kV-lj8"/>
                <outlet property="sortRightAnchor" destination="h8A-PT-5T8" id="QSe-j2-2M2"/>
                <outlet property="topUsersTable" destination="rkf-OI-Q0s" id="lmQ-Y3-MKo"/>
...
                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                    <connections>
                        <outlet property="dataSource" destination="-1" id="LKC-8u-zla"/>
                        <outlet property="delegate" destination="-1" id="h1H-sX-yb4"/>
                    </connections>
                </tableView>
                <searchBar contentMode="redraw" placeholder="Введите имя пользователя" translatesAutoresizingMaskIntoConstraints="NO" id="dCP-BR-k8b">
                    <rect key="frame" x="0.0" y="44" width="414" height="56"/>
                    <textInputTraits key="textInputTraits"/>
                    <connections>
                        <outlet property="delegate" destination="-1" id="KGb-XM-5Jt"/>
                    </connections>
                </searchBar>
...
